--- a/templates/emails/index.html.twig
+++ b/templates/emails/index.html.twig
@@ -8,12 +8,14 @@
         {% for message in app.flashes('notice') %}
             <div class="col-12 mt-2 alert alert-success flash-notice">
                 <span><i class="fa fa-info-circle"></i></span> {{ message }}
+                <a class="close-notif float-right" onclick="hideAlert('.flash-notice');" style="cursor: pointer;"><span><i class="fa fa-times"></i></span></a>
             </div>
         {% endfor %}
 
         {% for message in app.flashes('error') %}
             <div class="col-12 mt-2 alert alert-danger flash-error">
                 <span><i class="fa fa-exclamation-circle"></i></span> {{ message }}
+                <a class="close-notif float-right" onclick="hideAlert('.flash-error');" style="cursor: pointer;"><span><i class="fa fa-times"></i></span></a>
             </div>
         {% endfor %}
 
@@ -32,20 +34,23 @@
                             <tr>
                                 <th scope="row">{{ record.timein|date('l, M d Y') }}</th>
                                 <td>
-                                    {{ record.timein|date('h:i:s a') }} 
+                                    {{ record.timein|date('h:i:s a.') }} 
                                     <div class="float-right" id="actions">
                                         {% if record.sent == false %}
-                                        <a href="{{ path('email_send', {'id': record.id}) }}" class="mr-2"><span><i class="fa fa-share-square"></i></span></a>
-                                        <a href="{{ path('email_edit', {'id': record.id}) }}" class="mr-2 text-success"><span><i class="fa fa-edit"></i></span></a>    
+                                        <a href="{{ path('email_send', {'id': record.id}) }}" class="mr-2" onclick="return confirmSubmit('Are you sure you want to send this message?');"><span><i class="fa fa-share-square"></i></span></a>
+                                        <a href="{{ path('email_edit', {'id': record.id}) }}" class="mr-2 text-success" onclick="return confirmSubmit('Are you sure you want to modify this data?');"><span><i class="fa fa-edit"></i></span></a>    
                                         {% endif %}
 
-                                        <a href="{{ path('email_delete', {'id': record.id}) }}" class="text-danger"><span><i class="fa fa-times"></i></span></a> </td>
+                                        <a href="{{ path('email_delete', {'id': record.id}) }}" onclick="return confirmSubmit('Are you sure you want to delete this data?');" class="text-danger"><span><i class="fa fa-times"></i></span></a> </td>
                                     </div>
                             </tr>
                         {% endfor %}
                         <tr>
                             <td colspan="3" class="text-right">
-                                <a href="{{ path('email_new') }}" class="btn btn-dark">Punch In <span class="btn-punch-out"><i class="fa fa-angle-right"></i></span> </a>
+                                <form method="post" action="{{ path('email_new') }}">
+                                    <input type="hidden" name="_token" value="{{ csrf_token('new') }}">
+                                    <button class="btn btn-dark btn-punch-out">Punch In <span><i class="fa fa-angle-right"></i></span></button>
+                                </form>
                             </td>
                         </tr>
                     </tbody>
@@ -58,8 +63,8 @@
     </div>
     <div class="col-12">
         <h4>Guide:</h4>
-        <p>Press <a href="#" class="btn btn-dark">Punch In <span class="btn-punch-out"><i class="fa fa-angle-right"></i></span> </a> to record attendance.</p>
-        <p>Press <span><i class="fa fa-share-square text-primary"></i></span> to send email.</p>
+        <p>Press <a href="#" class="disabled btn btn-dark">Punch In <span class="btn-punch-out"><i class="fa fa-angle-right"></i></span> </a> to record new attendance.</p>
+        <p>Press <span><i class="fa fa-share-square text-primary"></i></span> to send record via email.</p>
         <p>Press <span><i class="fa fa-edit text-success"></i></span> to edit data.</p>
         <p>Press <span><i class="fa fa-times text-danger"></i></span> to delete data permanently.</p>
         {# <p>Data can only be edited if email not sent.</p>
