--- a/templates/emails/index.html.twig
+++ b/templates/emails/index.html.twig
@@ -19,7 +19,7 @@
             </div>
         {% endfor %}
 
-        <p class="display-4 my-5"> <span><i class="fa fa-business-time"></i></span> My Timecard</p>
+        <p class="display-4 mb-5"> <span><i class="fa fa-business-time"></i></span> My Timecard</p>
         <div class="col-12 p-0 mt-2 mb-2">
             <div class="table-responsive">
                 <table class="table table-striped table-bordered rounded">
