--- a/templates/inc/sidebar.html.twig
+++ b/templates/inc/sidebar.html.twig
@@ -1,23 +1,25 @@
-<div class="card text-center" style="width: 18rem;">
-    <div class="card-header">
-    Menu
-    </div>
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-            <a href="{{path('app_homepage')}}">Dashboard</a>
-        </li>
-        {% if is_granted('ROLE_ADMIN') %}
-            <li class="list-group-item">
-                <a href="{{path('email_index')}}">Records</a>
-            </li>
-            {% if is_granted('ROLE_SUPER_ADMIN') %}
+{% if is_granted('IS_AUTHENTICATED_FULLY') %} 
+    <div class="card text-center" style="width: 18rem;">
+        <div class="card-header">
+        Menu
+        </div>
+        <ul class="list-group list-group-flush">
+            {% if is_granted('ROLE_USER') %}
                 <li class="list-group-item">
-                    <a href="{{path('user_index')}}">Users</a>
+                    <a href="{{path('app_homepage')}}">Dashboard</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="#">Roles</a>
+                    <a href="{{path('email_index')}}">Records</a>
                 </li>
+                {% if is_granted('ROLE_SUPER_ADMIN') %}
+                    <li class="list-group-item">
+                        <a href="{{path('user_index')}}">Users</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#">Roles</a>
+                    </li>
+                {% endif %}
             {% endif %}
-        {% endif %}
-    </ul>
-</div> 
+        </ul>
+    </div> 
+{% endif %}
