--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,38 +1,48 @@
 {% extends 'base.html.twig' %}
-
 {% block javascripts %}
     <script>
         google.charts.load('current', {'packages':['corechart']});
         google.charts.setOnLoadCallback(drawChart);
     </script>
 {% endblock %}
-
 {% block title %}Dashboard{% endblock %}
-
 {% block body %}
     {% if is_granted('IS_AUTHENTICATED_FULLY') %} 
-    <div class="row">
-        {# you can read and display just one flash message type... #}
-        {% for message in app.flashes('notice') %}
-            <div class="col-12 mt-2 alert alert-success flash-notice">
-                <span><i class="fa fa-info-circle"></i></span> {{ message }}
-                <a class="close-notif float-right" onclick="hideAlert('.flash-notice');" style="cursor: pointer;"><span><i class="fa fa-times"></i></span></a>
+        <div class="row">
+            {# you can read and display just one flash message type... #}
+            {% for message in app.flashes('notice') %}
+                <div class="col-12 mt-2 alert alert-success flash-notice">
+                    <span><i class="fa fa-info-circle"></i></span> {{ message }}
+                    <a class="close-notif float-right" onclick="hideAlert('.flash-notice');" style="cursor: pointer;"><span><i class="fa fa-times"></i></span></a>
+                </div>
+            {% endfor %}
+            {% for message in app.flashes('error') %}
+                <div class="col-12 mt-2 alert alert-danger flash-error">
+                    <span><i class="fa fa-exclamation-circle"></i></span> {{ message }}
+                    <a class="close-notif float-right" onclick="hideAlert('.flash-error');" style="cursor: pointer;"><span><i class="fa fa-times"></i></span></a>
+                </div>
+            {% endfor %}
+            <div class="col-12">
+                <p class="display-4 mb-5"> <span><i class="fa fa-chart-line"></i></span> Dashboard</p>
             </div>
-        {% endfor %}
-
-        {% for message in app.flashes('error') %}
-            <div class="col-12 mt-2 alert alert-danger flash-error">
-                <span><i class="fa fa-exclamation-circle"></i></span> {{ message }}
-                <a class="close-notif float-right" onclick="hideAlert('.flash-error');" style="cursor: pointer;"><span><i class="fa fa-times"></i></span></a>
+            <div class="col-12">
+                <div id="div_chart"></div>
             </div>
-        {% endfor %}
-
-        <div class="col-12">
-            <p class="display-4 mb-5"> <span><i class="fa fa-chart-line"></i></span> Dashboard</p>
-        </div>
-        <div class="col">
-            <div id="chart_div"></div>
-        </div>
-    </div>
+            <div class="col-12">
+                <p class="font-weight-bold">Legends:</p>
+                <p> 
+                    <span style="display: inline-block;height: 15px;width: 15px;background-color: #e7711c;"></span> - More that 5 mins. late!
+                </p>
+                <p>
+                    <span style="display: inline-block;height: 15px;width: 15px;background-color: #4273e0;"></span> - Very Good!
+                </p>
+            </div>
+        </div>        
+        
+        
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script type="text/javascript">
+            {{ gc_draw(calendarChart, 'div_chart') }}
+        </script>
     {% endif %}
 {% endblock %}
